--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
-    "click-outside-vue3": "^4.0.1"
+    "@tailvue/nuxt": "^0.1.68",
+    "click-outside-vue3": "^4.0.1",
+    "nuxt-tailvue": "^1.0.95",
+    "tailvue": "^0.1.68"
   }
 }
