--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.3",
     "autoprefixer": "^10.4.13",
     "nuxt": "^3.0.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
+    "@nuxtjs/dotenv": "^1.4.1",
     "@tailvue/nuxt": "^0.1.68",
     "click-outside-vue3": "^4.0.1",
+    "js-cookie": "^3.0.1",
     "nuxt-tailvue": "^1.0.95",
     "tailvue": "^0.1.68"
   }
